# hl_communication

./: .gitignore  CMakeLists.txt  README.md  package.xml  protocol.h  protocol.proto  wks.yml
examples/: client_example.cpp  network_scan.cpp  server_example.cpp  tp_dump_msg.cpp
include/hl_communication/: game_controller_utils.h  labelling_utils.h  message_manager.h  robot_color_map.h  udp_broadcast.h  udp_message_manager.h  utils.h
proto/: camera.proto  capabilities.proto  captain.proto  extra_team_play.proto  game_controller.proto  intention.proto  labelling.proto  perception.proto  position.proto  protocol.proto  robot_estimation.proto  team_play.proto  wrapper.proto
src/hl_communication/: Sources.cmake  client_example.cpp  game_controller_utils.cpp  invert.cpp  invert.h  labelling_utils.cpp  labelling_utils.h  message_manager.cpp  robot_color_map.cpp  robot_msg_utils.cpp  robot_msg_utils.h  server_example.cpp  udp_broadcast.cpp  udp_broadcast.h  udp_message_manager.cpp  udp_message_manager.h  utils.cpp  utils.h
